- Updated YouTube API - Dropped the Module idea for now - Fixed some warnings - Updated AlertUtils.yesNo to make use of new features for Optional - Updated Ant build script